@@ -59,7 +59,9 @@
 
 #include <stddef.h>
 #include <sys/socket.h> 
+#include <sys/wait.h>
 
+#include "src/common/xmalloc.h"
 #include "src/common/xstring.h"
 #include "src/common/err.h"
 #include "src/common/list.h"
@@ -75,12 +77,36 @@
 
 int pdsh_module_priority = DEFAULT_MODULE_PRIORITY;
 
+struct ssh_info_struct {
+    int ssh_pid;            /* PID of ssh command         */
+    char *target;           /* Hostname of ssh target     */
+    int fd;                 /* stderr fd to ssh command for signals  */
+    int status;             /* Exit status of ssh command */
+    int exited;
+};
+
+static pthread_mutex_t reaper_mutex = PTHREAD_MUTEX_INITIALIZER;
+static pthread_cond_t reaper_cond = PTHREAD_COND_INITIALIZER;
+static pthread_t ssh_tid;
+static int ssh_count;
+static int first_ssh_started = 0;
+static List ssh_list;
+
+
+void ssh_info_append (pid_t pid, const char *host, int fd);
+void ssh_info_destroy (struct ssh_info_struct *s);
+struct ssh_info_struct * ssh_info_create (pid_t pid, const char *host, int fd);
+struct ssh_info_struct * ssh_info_find_by_fd (int fd);
+static void *ssh_reaper (void *arg);
+static void _block_sigchld (void);
+    
 /*
  * use_rw will be set to true for PCP mode
  */
 static bool use_rw = false;
 
 static int mod_ssh_postop(opt_t *opt);
+static int mod_ssh_exit (void);
 
 static int sshcmd_init(opt_t *);
 static int sshcmd_signal(int, int);
@@ -91,7 +117,7 @@ static int sshcmd(char *, char *, char *, char *, char *, int, int *);
  */
 struct pdsh_module_operations sshcmd_module_ops = {
     (ModInitF)       NULL,
-    (ModExitF)       NULL,
+    (ModExitF)       mod_ssh_exit,
     (ModReadWcollF)  NULL,
     (ModPostOpF)     mod_ssh_postop
 };
@@ -130,6 +156,8 @@ struct pdsh_module pdsh_module_info = {
 
 static int mod_ssh_postop(opt_t *opt)
 {
+    pthread_attr_t attr;
+
     if (strcmp(opt->rcmd_name, "ssh") == 0) {
         if (opt->connect_timeout != CONNECT_TIMEOUT) {
             err("%p: Cannot specify -t with \"-R ssh\"\n");
@@ -140,8 +168,13 @@ static int mod_ssh_postop(opt_t *opt)
          *  Don't need hostname resolution for ssh
          */
         opt->resolve_hosts = false;
-    }
 
+        /*
+         * Set the signal mask for the "main" thread to block
+         *  SIGCHLD so the ssh_reaper can collect exit codes 
+         */
+        _block_sigchld ();
+    }
     return 0;
 }
 
@@ -155,6 +188,8 @@ _drop_privileges()
 
 static int sshcmd_init(opt_t * opt)
 {
+    pthread_attr_t attr;
+
     if (pdsh_personality() == PCP)
         use_rw = true;
 
@@ -163,13 +198,53 @@ static int sshcmd_init(opt_t * opt)
      */
     _drop_privileges();
 
+    ssh_count = hostlist_count (opt->wcoll);
+
+    if ((ssh_list = list_create ((ListDelF) ssh_info_destroy)) == NULL)
+        return -1;
+
+    pthread_attr_init (&attr);
+    pthread_create (&ssh_tid, &attr, &ssh_reaper, NULL);
+
     return 0;
 }
 
+static int mod_ssh_exit (void)
+{
+    void *rc;
+    /* Clean up all kinds of funky junk */
+    if (!ssh_list)
+        return 0;
+
+    pthread_join (ssh_tid, &rc);
+
+    /*
+     * As each member of the ssh_list is destroyed, an error message
+     *  will be printed to the screen if exit code is nonzero.
+     */
+    list_destroy (ssh_list);
+
+    fflush (stderr);
+    return 0;
+}
+
+/*
+ * SSH doesn't support signal forwarding, at least the way pdsh uses it
+ *  at this time. Instead we always send SIGTERM which seems to have the
+ *  desired effect of killing off ssh most of the time.
+ */
 static int sshcmd_signal(int fd, int signum)
 {
-    /* not implemented */
-    return 0;
+    struct ssh_info_struct *s = ssh_info_find_by_fd (fd);
+    if (s == NULL)
+        return -1;
+
+    /*
+     *  Always send SIGTERM. SIGINT doesn't seem to get forwarded by ssh, and
+     *    really termination of the connection is probably the desired result.
+     */
+    err ("sending SIGTERM to ssh %s pid %d\n", s->target, s->ssh_pid);
+    return (kill (s->ssh_pid, SIGTERM));
 }
 
 /*
@@ -192,6 +267,12 @@ static int _pipecmd(char *path, char *args[], const char *ahost, int *fd2p)
             return -1;
         }
     }
+
+    /*
+     * Hold the reaper lock so that the child doesn't exit before
+     *  we have a chance to add its pid to the ssh_list
+     */
+    pthread_mutex_lock (&reaper_mutex);
 
     cpid = fork();
     if (cpid < 0) {
@@ -218,19 +299,9 @@ static int _pipecmd(char *path, char *args[], const char *ahost, int *fd2p)
                 _exit(255);
             }
         }
-        /* heroic measures to prevent ssh from prompting for pphrase */
-        setsid();
-        putenv("DISPLAY=");
 
-        /* fork again to lose parent. */
-        cpid = fork();
-        if (cpid < 0) {
-            err("%p: fork to lose parent failed for %S: %m\n", ahost);
-            _exit(255);
-        }
-        if (cpid > 0)
-            _exit(0);
-        /* in grandchild here. */
+        setsid();
+        setenv("DISPLAY", "", 1);
         execvp(path, args);
         err("%p: execlp %s failed for %S: %m.", path, ahost);
         _exit(255);
@@ -243,7 +314,16 @@ static int _pipecmd(char *path, char *args[], const char *ahost, int *fd2p)
             *fd2p = esp[0];
         }
         /* reap child. */
-        (void) wait(0);
+        /* (void) wait(0); */
+
+        ssh_info_append (cpid, ahost, esp[0]);
+
+        /*
+         * Now it is safe for the reaper to collect exit status
+         *  of the child.
+         */
+        pthread_mutex_unlock (&reaper_mutex);
+
         return sp[0];
     }
     /*NOTREACHED*/ return 0;
@@ -255,16 +335,12 @@ sshcmdr(char *ahost, char *addr, char *luser, char *ruser, char *cmd,
        int rank, int *fd2p)
 {
     char *prog = "ssh"; /* xbasename(_PATH_SSH); */
-    char *args[] = { 0, "-q", "-a", "-x", "-f", "-l", 0, 0, 0, 0 };
-
-    /* -f args changed for ssh2 (-fo didn't do the same thing as ssh1 -f) */
-    if (strcmp(prog, "ssh2") == 0)
-        args[4] = "-oBatchMode yes";
+    char *args[] = { 0, "-q", "-a", "-x", "-l", 0, 0, 0, 0, 0, 0 };
 
     args[0] = prog;
-    args[6] = ruser;            /* solaris cc doesn't like non constant */
-    args[7] = ahost;            /*     initializers */
-    args[8] = cmd;
+    args[5] = ruser;            /* solaris cc doesn't like non constant */
+    args[6] = ahost;            /*     initializers */
+    args[7] = cmd;
 
     return _pipecmd("ssh", args, ahost, fd2p);
 }
@@ -275,7 +351,7 @@ sshcmdrw(char *ahost, char *addr, char *luser, char *ruser, char *cmd,
          int rank, int *fd2p)
 {
     char *prog = "ssh"; /* xbasename(_PATH_SSH); */
-    char *args[] = { 0, "-q", "-a", "-x", "-l", 0, 0, 0, 0 };
+    char *args[] = { 0, "-q", "-a", "-x", "-l", 0, 0, 0, 0, 0 };
 
     args[0] = prog;
     args[5] = ruser;            /* solaris cc doesn't like non constant */
@@ -289,24 +365,126 @@ static int
 sshcmd(char *ahost, char *addr, char *luser, char *ruser, char *cmd,
          int rank, int *fd2p)
 {
+    int rc;
 	if (use_rw)
-		return sshcmdrw(ahost, addr, luser, ruser, cmd, rank, fd2p);
+		rc = sshcmdrw(ahost, addr, luser, ruser, cmd, rank, fd2p);
 	else
-		return sshcmdr(ahost, addr, luser, ruser, cmd, rank, fd2p);
+		rc = sshcmdr(ahost, addr, luser, ruser, cmd, rank, fd2p);
+
+
+    pthread_mutex_lock (&reaper_mutex);
+    if (first_ssh_started == 0) {
+        first_ssh_started = 1;
+        pthread_cond_signal (&reaper_cond);
+    }
+    pthread_mutex_unlock (&reaper_mutex);
+
+    return rc;
 }
 
-#if 0
-static int rshcmd(char *ahost, char *luser, char *ruser, char *cmd, int *fd2p)
+struct ssh_info_struct * ssh_info_create (pid_t pid, const char *host, int fd)
 {
-    char *args[] = { "rsh", 0, "-l", 0, 0, 0 };
-
-    args[1] = ahost;            /* solaris cc doesn't like non constant */
-    args[3] = ruser;            /*     initializers */
-    args[4] = cmd;
-
-    return _pipecmd(_PATH_RSH, args, ahost, fd2p);
+    struct ssh_info_struct *s = Malloc (sizeof (*s));
+    s->ssh_pid = pid;
+    s->target = Strdup (host);
+    s->fd = fd;
+    s->exited = 0;
+    s->status = -1;
+    return (s);
 }
-#endif
+
+void ssh_info_destroy (struct ssh_info_struct *s)
+{
+    if (s == NULL)
+        return;
+
+    if (s->status != 0)
+        err ("%p: %s: ssh exited with exit code %d\n", 
+             s->target, WEXITSTATUS (s->status));
+
+    Free ((void **)&s->target);
+    Free ((void **)&s);
+    return;
+}
+
+void ssh_info_append (pid_t pid, const char *host, int fd)
+{
+    struct ssh_info_struct *s = ssh_info_create (pid, host, fd);
+    list_append (ssh_list, s);
+    return;
+}
+
+static int cmp_fd (struct ssh_info_struct *s, int *fdp)
+{
+    return (s->fd == *fdp);
+}
+
+struct ssh_info_struct * ssh_info_find_by_fd (int fd)
+{
+    return (list_find_first (ssh_list, (ListFindF) cmp_fd, &fd));
+}
+
+static int cmp_pid (struct ssh_info_struct *s, pid_t *pidp)
+{
+    return (s->ssh_pid == *pidp);
+}
+
+static void *ssh_reaper (void *arg)
+{
+    sigset_t set;
+    int      sig;
+
+    /*
+     * Wait for signal that we're starting
+     */
+    pthread_mutex_lock (&reaper_mutex);
+    if (!first_ssh_started)
+        pthread_cond_wait (&reaper_cond, &reaper_mutex);
+    pthread_mutex_unlock (&reaper_mutex);
+
+    if (ssh_count <= 0)
+        return NULL;
+
+    sigemptyset (&set);
+    sigaddset (&set, SIGCHLD);
+
+    while (ssh_count) {
+        int status = 0;
+        pid_t pid = -1; 
+        struct ssh_info_struct *s;
+
+        if ((pid = waitpid (-1, &status, 0)) < 0) {
+            if (errno == ECHILD) {
+                err ("%p: ssh: ssh_count = %d and ECHILD\n", ssh_count);
+                break;
+            }
+            err ("%p: ssh: waitpid: %m\n");
+            continue;
+        }
+
+        pthread_mutex_lock (&reaper_mutex);
+        if (!(s = list_find_first (ssh_list, (ListFindF) cmp_pid, &pid))) {
+            err ("%p: ssh: pid %d exited but wasn't an ssh cmd\n", (int) pid);
+            pthread_mutex_unlock (&reaper_mutex);
+            continue;
+        }
+        pthread_mutex_unlock (&reaper_mutex);
+
+        s->exited = 1;
+        s->status = status;
+        ssh_count--;
+    }
+
+    return NULL;
+}
+
+static void _block_sigchld (void)
+{
+    sigset_t set;
+    sigemptyset (&set);
+    sigaddset (&set, SIGCHLD);
+    pthread_sigmask (SIG_BLOCK, &set, NULL);
+}
 
 /*
  * vi:tabstop=4 shiftwidth=4 expandtab
